# PolyglotCompiler

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dependencies.cmake  LICENSE  PolyglotCompiler.sln  README.md  VERSION.txt  text.txt
backends/: CMakeLists.txt
backends/arm64/include/: arm64_register.h  arm64_target.h  machine_ir.h
backends/arm64/src/: arm64_target_backend.cpp  calling_convention.cpp
backends/common/include/: abi.h  backend_registry.h  debug_emitter.h  debug_info.h  dwarf_builder.h  object_file.h  relocation.h  target_backend.h  target_machine.h
backends/common/src/: abi.cpp  backend_registry.cpp  debug_emitter.cpp  debug_info.cpp  dwarf_builder.cpp  object_file.cpp  target_backend.cpp
backends/wasm/include/: wasm_target.h
backends/wasm/src/: wasm_target.cpp  wasm_target_backend.cpp  wat_printer.cpp
backends/x86_64/include/: instruction_scheduler.h  machine_ir.h  x86_register.h  x86_target.h
backends/x86_64/src/: calling_convention.cpp  optimizations.cpp  x86_target_backend.cpp
common/: CMakeLists.txt
common/include/: binary_container.h  target_triple.h  version.h  version.h.in
common/include/core/: config.h  source_loc.h  symbols.h  types.h
common/include/debug/: debug_info_adapter.h  debug_info_builder.h  dwarf5.h
common/include/ir/: ir_builder.h  ir_parser.h  ir_printer.h  ir_visitor.h
common/include/plugins/: plugin_api.h  plugin_manager.h
common/include/utils/: arena.h  hash.h  logging.h  string_pool.h
common/src/: binary_container.cpp  target_triple.cpp
common/src/core/: symbol_table.cpp  type_system.cpp
common/src/debug/: dwarf5.cpp
common/src/plugins/: plugin_manager.cpp
frontends/: CMakeLists.txt
frontends/common/include/: diagnostics.h  frontend_registry.h  identifier_table.h  language_frontend.h  language_versions.h  lexer_base.h  parser_base.h  preprocessor.h  sema_context.h  string_arena.h  token_pool.h
frontends/common/src/: frontend_registry.cpp  identifier_table.cpp  language_versions.cpp  lexer_base.cpp  preprocessor.cpp  string_arena.cpp  token_pool.cpp
frontends/cpp/include/: cpp_ast.h  cpp_constexpr.h  cpp_frontend.h  cpp_lexer.h  cpp_lowering.h  cpp_parser.h  cpp_sema.h
frontends/cpp/src/: cpp_frontend.cpp
frontends/dotnet/include/: dotnet_ast.h  dotnet_frontend.h  dotnet_lexer.h  dotnet_lowering.h  dotnet_parser.h  dotnet_sema.h  metadata_reader.h
frontends/dotnet/src/: dotnet_frontend.cpp  metadata_reader.cpp
frontends/go/include/: go_ast.h  go_frontend.h  go_import_resolver.h  go_lexer.h  go_lowering.h  go_parser.h  go_sema.h
frontends/go/src/: go_frontend.cpp
frontends/java/include/: class_file_reader.h  java_ast.h  java_frontend.h  java_lexer.h  java_lowering.h  java_parser.h  java_sema.h
frontends/java/src/: class_file_reader.cpp  java_frontend.cpp
frontends/javascript/include/: javascript_ast.h  javascript_frontend.h  javascript_import_resolver.h  javascript_lexer.h  javascript_lowering.h  javascript_parser.h  javascript_sema.h
frontends/javascript/src/: javascript_frontend.cpp
frontends/ploy/include/: command_runner.h  package_discovery_cache.h  package_indexer.h  ploy_ast.h  ploy_config_registry.h  ploy_frontend.h  ploy_lexer.h  ploy_lowering.h  ploy_parser.h  ploy_sema.h
frontends/ploy/src/: ploy_frontend.cpp
frontends/python/include/: pyi_loader.h  python_advanced_features.h  python_ast.h  python_frontend.h  python_lexer.h  python_lowering.h  python_parser.h  python_sema.h
frontends/python/src/: pyi_loader.cpp  python_frontend.cpp
frontends/ruby/include/: ruby_ast.h  ruby_frontend.h  ruby_import_resolver.h  ruby_lexer.h  ruby_lowering.h  ruby_parser.h  ruby_sema.h
frontends/ruby/src/: ruby_frontend.cpp
frontends/rust/include/: crate_loader.h  rust_advanced_features.h  rust_ast.h  rust_frontend.h  rust_lexer.h  rust_lowering.h  rust_parser.h  rust_sema.h
frontends/rust/src/: crate_loader.cpp  rust_frontend.cpp
middle/: CMakeLists.txt
middle/include/ir/: analysis.h  cfg.h  class_metadata.h  data_layout.h  ir_builder.h  ir_context.h  ir_parser.h  ir_printer.h  ir_visitor.h  ssa.h  template_instantiator.h  verifier.h
middle/include/lto/: link_time_optimizer.h
middle/include/passes/: devirtualization.h  pass_manager.h
middle/include/pgo/: profile_data.h
middle/src/ir/: analysis.cpp  builder.cpp  cfg.cpp  data_layout.cpp  ir_context.cpp  parser.cpp  printer.cpp  ssa.cpp  template_instantiator.cpp  verifier.cpp
middle/src/lto/: link_time_optimizer.cpp
middle/src/passes/: pass_manager.cpp
middle/src/pgo/: profile_data.cpp
runtime/: CMakeLists.txt
runtime/include/: polyrt_linux.h
runtime/include/gc/: gc_api.h  gc_strategy.h  heap.h  root_guard.h  runtime.h
runtime/include/interop/: calling_convention.h  container_marshal.h  ffi.h  marshalling.h  memory.h  (+2 more)
tests/: CMakeLists.txt
tests/integration/: e2e_macho_smoke.cpp  e2e_triple_propagation.cpp  e2e_wasm_smoke.cpp  elf_exec_smoke_test.cpp  explicit_widths_e2e_test.cpp  lsp_diagnostics_e2e_test.cpp  lsp_navigation_e2e_test.cpp  lsp_refactor_e2e_test.cpp  lsp_semantic_tokens_e2e_test.cpp  macho_exec_smoke_test.cpp  object_format_test.cpp  pe_runtime_smoke_test.cpp  ploy_e2e_real_exit_code_test.cpp  printf_pipeline_e2e_test.cpp  profiler_e2e_test.cpp  samples_cross_platform_consistency_test.cpp  samples_regression_test.cpp
tests/samples/: README.md  README_zh.md  advanced_pipeline.ploy  basic_linking.ploy  class_test.cpp  complete_implementation_test.cpp  complex_types.ploy  container_marshalling.ploy  cross_lang_class_instantiation.ploy  e2e_test.cpp  error_handling.ploy  exception_test.cpp  float_test.cpp  mixed_compilation.ploy  multi_language_pipeline.ploy  package_import.ploy  pipeline_control_flow.ploy  remove_env.ps1  remove_env.sh  setup_env.ps1  setup_env.sh  simd_test.cpp
tests/unit/: constexpr_test.cpp  devirtualization_test.cpp  dwarf5_test.cpp  gvn_test.cpp  linker_test.cpp  loop_optimization_test.cpp  target_triple_test.cpp  type_system_test.cpp
tools/: CMakeLists.txt  fixup_macos_bundle.cmake
tools/polyls/: polyls.cpp
tools/ui/: setup_qt.ps1  setup_qt.sh
(+1081 files in other folders)
